--- a/form.html
+++ b/form.html
@@ -5,55 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <section class="section">
       <form class="order-form" name="order-form">
         <strong class="order-form__title">ЗВ’ЯЖІТЬСЯ З НАМИ </strong>
-        <input
-          name="order-name"
-          type="text"
-          required
-          minlength="2"
-          placeholder="Ім’я"
-        />
-        <input
-          name="order-mail"
-          type="email"
-          required
-          minlength="2"
-          placeholder="Email"
-        />
-        <select name="plastic">
-          <option value="no">Види пластика</option>
-          <option value="300">300 мікрон</option>
-          <option value="200">200 мікрон</option>
-          <option value="100">100 мікрон</option>
-          <option value="support">Труднощі у виборі - ми допоможемо</option>
-        </select>
-        <select name="quality">
-          <option value="no">Якість друку</option>
-          <option value="300">300 мікрон</option>
-          <option value="200">200 мікрон</option>
-          <option value="100">100 мікрон</option>
-          <option value="support">Труднощі у виборі - ми допоможемо</option>
-        </select>
-        <select name="color">
-          <option value="no">Колір</option>
-          <option value="300">300 мікрон</option>
-          <option value="200">200 мікрон</option>
-          <option value="100">100 мікрон</option>
-          <option value="support">Труднощі у виборі - ми допоможемо</option>
-        </select>
-        <label for="comment">Повідомлення</label>
-        <textarea
-          name="modal-comment"
-          name="comment"
-          id="comment"
-          placeholder="Залишіть своє повідомлення"
-        ></textarea>
-        <p>*Прикріпіть зображення/креслення/STL/Obj/CAD-модель</p>
+        <div class="form-input">
+          <input
+            name="order-name"
+            type="text"
+            required
+            minlength="2"
+            placeholder="Ім’я"
+          />
+        </div>
+        <div class="form-input">
+          <input
+            name="order-mail"
+            type="email"
+            required
+            minlength="2"
+            placeholder="Email"
+          />
+        </div>
+        <div class="form-input">
+          <select name="plastic">
+            <option value="no">Види пластика</option>
+            <option value="300">300 мікрон</option>
+            <option value="200">200 мікрон</option>
+            <option value="100">100 мікрон</option>
+            <option value="support">Труднощі у виборі - ми допоможемо</option>
+          </select>
+        </div>
+        <div class="form-input">
+          <select name="quality">
+            <option value="no">Якість друку</option>
+            <option value="300">300 мікрон</option>
+            <option value="200">200 мікрон</option>
+            <option value="100">100 мікрон</option>
+            <option value="support">Труднощі у виборі - ми допоможемо</option>
+          </select>
+        </div>
+        <div class="form-input">
+          <select name="color">
+            <option value="no">Колір</option>
+            <option value="300">300 мікрон</option>
+            <option value="200">200 мікрон</option>
+            <option value="100">100 мікрон</option>
+            <option value="support">Труднощі у виборі - ми допоможемо</option>
+          </select>
+        </div>
+        <div class="form-input">
+          <label for="comment">Повідомлення</label>
+          <textarea
+            name="modal-comment"
+            name="comment"
+            id="comment"
+            placeholder="Залишіть своє повідомлення"
+          ></textarea>
+        </div>
+        <div class="form-input">
+          <input type="file" id="file" />
+          <label for="file"
+            >*Прикріпіть зображення/креслення/STL/Obj/CAD-модель</label
+          >
+        </div>
         <button type="submit">ВІДПРАВИТИ</button>
       </form>
       <address class="address-section">
@@ -61,12 +85,12 @@
           <h2 class="caption">ТЕЛЕФОНИ</h2>
           <ul class="tel__list">
             <li class="tel__item">
-              <a href="tel:+380957384551" class="tel__link"
+              <a href="tel:+380957384551" class="tel__link link"
                 >+38 (095) -73-84-551</a
               >
             </li>
             <li class="tel__item">
-              <a href="tel:+380980025235" class="tel__link"
+              <a href="tel:+380980025235" class="tel__link link"
                 >+38 (098) -00-25-235</a
               >
             </li>
@@ -74,7 +98,9 @@
         </div>
         <div class="address__mail">
           <h2 class="caption">Email</h2>
-          <a class="address__mail--link" href="mailto:3dfreedom.info@gmail.com"
+          <a
+            class="address__mail--link link"
+            href="mailto:3dfreedom.info@gmail.com"
             >3dfreedom.info@gmail.com</a
           >
         </div>
