--- a/form.html
+++ b/form.html
@@ -39,8 +39,7 @@
           
 
           <div class="select-box">
-            <p class="selected select-form__subtitle">Види пластика</p>
-            <div class="options-container active">
+            <div class="options-container">
               <div class="option">
                 <input
                   type="radio"
@@ -78,6 +77,7 @@
                 <label for="support">Труднощі у виборі - ми допоможемо</label>
               </div>
             </div>
+            <p class="selected select-form__subtitle">Види пластика</p>
           </div>
 
         <div class="form-input">
